--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,225 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.nari.dataSharing</groupId>
-  <artifactId>jibeiDataSharingServiceCollaboration</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.nari.dataSharing</groupId>
+    <artifactId>jibeiDataSharingServiceCollaboration</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>serviceCollaborationModule</module>
+        <module>dataSharingModule</module>
+    </modules>
 
-  <name>jibeiDataSharingServiceCollaboration</name>
-  <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <spring.cloud.alibaba.dependencies>2022.0.0.0</spring.cloud.alibaba.dependencies>
+        <spring.cloud.version>2022.0.0</spring.cloud.version>
+        <spring.boot.version>3.0.2</spring.boot.version>
+        <mysql.version>8.0.29</mysql.version>
+        <lombok.version>1.18.24</lombok.version>
+        <poi.version>5.2.2</poi.version>
+        <commons.fileupload.version>1.3.3</commons.fileupload.version>
+        <mybatis.spring.boot.starter.version>3.0.0</mybatis.spring.boot.starter.version>
+        <druid.spring.boot.starter.version>1.2.20</druid.spring.boot.starter.version>
+        <commons.io.version>2.5.0</commons.io.version>
+        <commons.configuration.version>2.8.0</commons.configuration.version>
+        <fastjson.version>2.0.7</fastjson.version>
+        <pagehelper.spring.boot.starter.version>2.0.0</pagehelper.spring.boot.starter.version>
+        <java.version>1.8</java.version>
+        <grpc.version>1.6.1</grpc.version>
+        <dynamic.datasource.spring.boot.starter.version>3.6.1</dynamic.datasource.spring.boot.starter.version>
+        <dm.jdbc.version>7.0.0</dm.jdbc.version>
+        <commons.lang3.version>3.12.0</commons.lang3.version>
+        <spring.boot.starter.log4j2.version>3.0.4</spring.boot.starter.log4j2.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
+        <jasypt-spring-boot-starter.version>3.0.5</jasypt-spring-boot-starter.version>
+        <!--<springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>-->
+        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.1.0</knife4j-openapi3-jakarta-spring-boot-starter.version>
+        <httpclient.version>4.5.14</httpclient.version>
+        <spring-integration.version>6.1.4</spring-integration.version>
+        <hutool-core.version>5.5.6</hutool-core.version>
+        <com.google.guava.version>21.0</com.google.guava.version>
+    </properties>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <dependencyManagement>
+        <dependencies>
+            <!--spring boot 3.0.2-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--spring cloud 2022.0.0 SpringCloud 微服务-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--spring cloud alibaba2022.0.0.0 如果不加spring-boot-maven-plugin无法引入
+                新版alibaba版本 2021.0.1.0  SpringCloud Alibaba 微服务
+            -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.dependencies}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <optional>true</optional>
+            </dependency>
+
+            <!--引入德鲁伊数据源，直接引入starter不是jar-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.spring.boot.starter.version}</version>
+            </dependency>
+
+            <!-- 达梦数据库连接驱动 -->
+            <dependency>
+                <groupId>dm.jdbc</groupId>
+                <artifactId>dm-jdbc</artifactId>
+                <version>${dm.jdbc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.spring.boot.starter.version}</version>
+                <exclusions>
+                    <!-- 排除默认的 HikariCP 数据源 -->
+                    <exclusion>
+                        <groupId>com.zaxxer</groupId>
+                        <artifactId>HikariCP</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>${dynamic.datasource.spring.boot.starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.2</version>
+                <scope>test</scope>
+            </dependency>
+
+
+            <!-- pageHelper 分页插件 Springboot 3.x 版本必须引用1.4.6版本以上,否则无效 -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.spring.boot.starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-configuration2</artifactId>
+                <version>${commons.configuration.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt-spring-boot-starter.version}</version>
+            </dependency>
+
+            <!-- 阿里JSON解析器 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <!--配置不生效 还未解决！ 导入SpringBoot集成Open API 3.0（Swagger3.0）的坐标 参考文档：https://zhuanlan.zhihu.com/p/638887405-->
+            <!-- 这个坐标它提供了一组注解和工具来集成Swagger UI和OpenAPI规范等-->
+            <!--<dependency>
+              <groupId>org.springdoc</groupId>
+              <artifactId>springdoc-openapi-ui</artifactId>
+              <version>${springdoc-openapi-ui.version}</version>
+            </dependency>-->
+
+            <!--参考文档：https://zhuanlan.zhihu.com/p/637810792-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+                <version>${knife4j-openapi3-jakarta-spring-boot-starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+
+            <!-- Spring集成Redis组件 -->
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-redis</artifactId>
+                <version>${spring-integration.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-core</artifactId>
+                <version>${hutool-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${com.google.guava.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
